added hamburger to the mobile design

--- a/about.html
+++ b/about.html
@@ -14,14 +14,23 @@
         <h3>MediConnect</h3>
     </div>
     <nav class="sidenav">
+        <div class="mobile-flex">
+            <img class="close" src="images\icon-close.svg" alt="">
+            <div class="logo">
+                <h3>MediConnect</h3>
+            </div>                
+        </div>
        <ul>
            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li> 
             <li><a href="talent.html">Talent Categories</a></li>           
-            <li><a href="works.html">How It Works</a></li>
-                              
+            <li><a href="works.html">How It Works</a></li>                              
         </ul>
-    </nav>        
+    </nav>
+    <button class="header-button">Log In</button> 
+    <div class="hamburger">
+        <img src="images\icon-hamburger.svg" alt="">
+    </div>               
   </div>
   <div class="about-hero">
     <h2>About Mediconnect</h2>
@@ -202,6 +211,7 @@
            <p>Copyright 2023.All Rights Reserved</p>
        </div>
    </div>
-</footer>   
+</footer> 
+<script src="team.js"></script>  
 </body>
 </html>
