--- a/works.html
+++ b/works.html
@@ -13,6 +13,12 @@
               <h3>MediConnect</h3>
           </div>
           <nav class="sidenav">
+            <div class="mobile-flex">
+                <img class="close" src="images\icon-close.svg" alt="">
+                <div class="logo">
+                    <h3>MediConnect</h3>
+                </div>                
+            </div>
              <ul>
                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li> 
@@ -20,7 +26,11 @@
                   <li><a href="works.html">How It Works</a></li>
                                     
               </ul>
-          </nav>        
+          </nav>
+          <button class="header-button">Log In</button> 
+          <div class="hamburger">
+            <img src="images\icon-hamburger.svg" alt="">
+        </div>       
         </div>
         <div class="works-hero">
             <h2>Simplified Process to Find  Your Ideal Healthcare Talent or Dream Job.</h2>
@@ -168,6 +178,7 @@
                <p>Copyright 2023.All Rights Reserved</p>
            </div>
        </div>
-   </footer>   
+   </footer> 
+   <script src="team.js"></script>  
 </body>
 </html>
