--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>MediConnect</title>
 </head>
 <body>
-    <header>    
+    <header class="index-header">
+     <div class="hero-back">    
       <div class="header-flex">
         <div class="logo">
             <h3>MediConnect</h3>
@@ -19,8 +20,7 @@
                 <img class="close" src="images\icon-close.svg" alt="">
                 <div class="logo">
                     <h3>MediConnect</h3>
-                </div>
-                
+                </div>                
             </div>
            <ul>
                <li><a href="index.html">Home</a></li>
@@ -34,19 +34,16 @@
             <img src="images\icon-hamburger.svg" alt="">
         </div>       
       </div>
-      <div class="hero">
-        <div class="left">
-            <img class="hero-img" src="images\hero img.jpg" alt="">
-        </div>
-        <div class="right">
+      <div class="hero"> 
             <div class="build"> </div>
             <h2>Your Gateway to Exceptional Healthcare Professionals</h2>
             <p>Discover talent that aligns with your vision and values.Break free from
-               traditional hiring.Your ideal team is just a click away. <span class="bld">Embrace it!</span>
+               traditional hiring.</p>
+               <p>Your ideal team is just a click away. <span class="bld">Embrace it!</span>
             </p>
-            <button class="btn-1">Start Hiring Now</button>
-        </div>
-      </div>            
+            <button class="btn-1">Start Hiring Now</button>   
+      </div> 
+    </div>           
     </header>
     
     <section class="function">
